# shell-config

./: .gitconfig  .gitignore  .gitmodules  .osx  .zshrc  Brewfile  Caskfile  LICENSE-MIT.txt  Makefile  README.md  __legacy.zsh  bootstrap  custom-commands.txt  link-dotfiles.py  make-links.py  managed-dotfiles  managed-dotfiles.txt  pypirc  pyproject.toml  update
dotfiles/: bash_profile  common-aliases  cookiecutterrc  dircolors-256  duti  editorconfig  gitconfig  gvimrc.after  hgrc  npmrc  pypirc  tmux.conf  vimrc  vimrc.after  vimrc.before  wakeup  zpreztorc  zprofile  zshenv  zshrc
dotfiles-macos/: sshfs-volumes  zprofile.local  zshrc.local
dotfiles-macos/karabiner.d/configuration/: karabiner.json
dotfiles-server/: bashrc
dotfiles/atom/: .gitignore  config.cson  snippets.cson  styles.less
dotfiles/config/: nvim  starship.toml
dotfiles/config/configstore/: postgis-editor.json
dotfiles/csl/: README.md
dotfiles/ipython/profile_basic/: ipython_config.py  ipython_console_config.py  (+2 more)
dotfiles/matplotlib/: fontList.json  fontlist-v300.json  fontlist-v310.json
dotfiles/vim-plugins/: davenquinn  vim-dadbod  vim-plugins
dotfiles/words/: en.utf-8.add
dotfiles/zsh-prompt-theme/: mac-ascii-art.txt  prompt_daven_setup
init/: Brewfile  Caskfile  iterm-colorschemes.sh  local-development.sh  osx.sh
iterm2-config/: com.googlecode.iterm2.plist
scripts/: attach-tmux.zsh  backup-restore-docker-volumes.sh  itunes-switch-airplay  itunes-switch-airplay.applescript  ubuntu-basic-setup.sh
vs-code/: settings.json
vs-code/snippets/: python.json
(+40 files in other folders)
