[tool.poetry]
name = "shell-config"
version = "0.1.0"
description = ""
authors = ["Daven Quinn <dev@davenquinn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
